# quickhorse

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  test_api.rs
.github/workflows/: ci.yml
docs/roadmap/: roadmap.md  v0.5.1-roadmap.md  v0.5.2-roadmap.md
src/: lib.rs  main.rs
src/agent/: context.rs  mod.rs
src/commands/: clear.rs  help.rs  mod.rs  model.rs  provider.rs  registry.rs  session.rs  status.rs
src/config/: mod.rs  setup.rs
src/error/: api.rs  classify.rs  mod.rs  provider.rs  types.rs
src/log/: config.rs  diagnostic.rs  init.rs  mod.rs  sink.rs  types.rs
src/mcp/: client.rs  mod.rs  protocol.rs  server.rs
src/permissions/: bash.rs  config.rs  mod.rs  types.rs
src/provider/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  stream.rs
src/secure_storage/: encrypted_file.rs  keychain.rs  mod.rs  plain_text.rs
src/session/: manager.rs  mod.rs  persistence.rs
src/test_utils/: fixtures.rs  helpers.rs  mock.rs  mod.rs
src/tools/: bash.rs  database.rs  execute.rs  file_edit.rs  file_read.rs  git.rs  glob.rs  grep.rs  image.rs  mod.rs  patch.rs  tool_trait.rs  web_fetch.rs  write.rs
src/tui/: app.rs  cursor.rs  event.rs  history.rs  history_cell.rs  mod.rs  permission_dialog.rs  progress.rs  scroll_state.rs  stream_state.rs  terminal.rs  transcript_cache.rs  ui.rs
src/tui/completion/: command.rs  mod.rs  path.rs
src/tui/widgets/: chat.rs  footer.rs  header.rs  mod.rs  tool_card.rs
tests/: agent_integration_test.rs  api_test.rs  commands_test.rs  config_test.rs  error_test.rs  permission_test.rs  provider_integration_test.rs  session_integration_test.rs  streaming_test.rs  streaming_unit_test.rs  text_editor_test.rs  tools_test.rs
